versions/v4.2.0/samples/net/sockets/coap_server/README.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/samples/net/sockets/coap_server/README.html
original_path: samples/net/sockets/coap_server/README.html
---

# CoAP service

[
Browse source code on GitHub
](https://github.com/zephyrproject-rtos/zephyr/blob/main//samples/net/sockets/coap_server/README.rst/..)

## Overview

This sample shows how to register CoAP resources to a main CoAP service.
The CoAP server implementation expects all services and resources to be
available at compile time, as they are put into dedicated sections.

The resource is placed into the correct linker section based on the owning
service’s name. A linker file is required, see `sections-ram.ld` for an example.

This demo assumes that the platform of choice has networking support,
some adjustments to the configuration may be needed.

The sample will listen for requests on the default CoAP UDP port
(5683 or 5684 for secure CoAP) in the site-local IPv6 multicast address reserved
for CoAP nodes.

The sample exports the following resources:

```text
/test
/seg1/seg2/seg3
/query
/separate
/large
/location-query
/large-update
```

These resources allow a good part of the ETSI test cases to be run
against coap-server.

## Building And Running

Build the CoAP server sample application like this:

```shell
west build -b <board to use> samples/net/sockets/coap_server
```

Use [overlay-dtls.conf ](https://github.com/zephyrproject-rtos/zephyr/blob/main/samples/net/sockets/coap_server/overlay-dtls.conf)
to build the sample with CoAP secure resources instead.

This project has no output in case of success, the correct
functionality can be verified by using some external tool such as tcpdump
or wireshark.

See the [net-tools](https://github.com/zephyrproject-rtos/net-tools) project for more details

This sample can be built and executed on QEMU or native\_sim board as
described in [Networking with the host system](../../../../connectivity/networking/networking_with_host.md#networking-with-host).

Use this command on the host to run the [libcoap](https://github.com/obgm/libcoap) implementation of
the ETSI test cases:

```shell
sudo ./examples/etsi_coaptest.sh -i tap0 2001:db8::1
```

To build the version supporting the TI CC2520 radio, use the supplied
prj\_cc2520.conf configuration file enabling IEEE 802.15.4.

### Wi-Fi

The IPv4 Wi-Fi support can be enabled in the sample with
[Wi-Fi snippet](../../../../snippets/wifi-ipv4/README.md#snippet-wifi-ipv4).

## See also

[COAP Library](../../../../doxygen/html/group__coap.md)

[CoAP service API](../../../../doxygen/html/group__coap__service.md)
